--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>brooklyn-turis-clarity</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>JTE Financial</title>
+    <meta name="description" content="JTE Financial" />
 
-    <meta property="og:title" content="brooklyn-turis-clarity" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="JTE Financial" />
+    <meta property="og:description" content="Complete Financial Services in Brooklyn, NY since 1992" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/JTE.png" />
   </head>
 
   <body>
