--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <meta property="og:title" content="JTE Financial" />
     <meta property="og:description" content="Complete Financial Services in Brooklyn, NY since 1992" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/JTE.png" />
+    <meta property="og:image" content="./public/JTE.png" />
+    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png">
   </head>
 
   <body>
